...
    // MARK: - Private properties:
    private var estimatedProgressObservation: NSKeyValueObservation?
    
    // MARK: - LifeCycle:
    override func viewDidLoad() {
        super.viewDidLoad()
        webView.accessibilityIdentifier = "WebView"
        webView.navigationDelegate = self
        presenter?.viewDidLoad()
    }
    
    // MARK: - Methods:
    static func cleanCookies() {
...
