...
    @IBOutlet private weak var shareButton: UIButton!
    
    //MARK: - Lifecycle:
    override func viewDidLoad() {
        super.viewDidLoad()
        
        backwardButton.accessibilityIdentifier = "BackwardButtonOnSIVC"
        
        setImageViewPicture()
        scrollView.minimumZoomScale = 0.1
        scrollView.maximumZoomScale = 3
        scrollView.delegate = self
    }
...
